--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,48 +1,77 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
+/* Header Section  */
 header {
-    background-color: #A6D1E6;
-    padding: 25px 25px ;
-    
+  background-color: #a6d1e6;
+  padding: 30px 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: center;
+  z-index: 99999;
 }
-.nav-bar {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+}
+header a {
+  text-decoration: none;
 }
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
-header ul li {
-    display: inline-block;
-    /* margin: 10px 25px; */
-}
-header ul li a {
-    text-decoration: none;
-}
-.hero {
-    height: 200px;
-    background-color: beige;
-}
-.about {
-    height: 200px;
-}
-.projects {
-    height: 200px;
-    background-color: beige;
-}
-.contact{
-    height: 200px;
+header nav ul li a {
+  padding: 10px 50px;
+  font-weight: lighter;
+  font-size: 30px;
+  /* text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
 }
 
+/* Hero Section  */
+.hero {
+  height: 200px;
+  background-color: beige;
+}
+.about {
+  height: 200px;
+}
+.projects {
+  height: 200px;
+  background-color: beige;
+}
+.contact {
+  height: 200px;
+}
+
+
+/* Footer Section  */
 footer {
-    background-color: #3D3C42;
-    height: 100px;
+  background-color: #3d3c42;
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+footer p {
+  line-height: 1.5;
+  text-align: right;
+}
+.socials {
+  display: flex;
+  justify-content: center;
+}
+.socials i {
+  padding: 0 10px;
+}
+.socials a {
+  text-decoration: none;
+  color: inherit;
 }
