--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+section {
+    padding: 60px;
+}
 /* Header Section  */
 header {
   background-color: #a6d1e6;
@@ -33,11 +36,10 @@ header nav ul li a {
   font-size: 30px;
   /* text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
 }
-
-/* Hero Section  */
+/* Hero Banner Section  */
 .hero {
-  height: 200px;
-  background-color: beige;
+  background-image: url(../images/long-journey-f2-1600x900.jpg);
+  background-size: cover;
 }
 .about {
   height: 200px;
@@ -49,7 +51,6 @@ header nav ul li a {
 .contact {
   height: 200px;
 }
-
 
 /* Footer Section  */
 footer {
