changed the background color for work section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,7 +82,7 @@ header nav ul li a {
 /* End of About Me Section  */
 .projects {
   height: 200px;
-  background-color: beige;
+  background-color: #FBC7BA;
 }
 .contact {
   height: 200px;
