--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,10 +81,37 @@ header nav ul li a {
 }
 /* End of About Me Section  */
 .projects {
-  height: 200px;
-  background-color: #FBC7BA;
+  background-color: #fbc7ba;
+}
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 60%;
+  margin: 0 auto 0 auto;
+}
+.flex-item {
+  margin: 0.5em;
+  padding: 0 0 20px 0;
+  min-height: 200px;
+  max-height: 200px;
+  text-decoration: none;
+  font-size: 0.9rem;
+  border: 5px solid black;
+  border-radius: 5%;
+  display: flex;
+  align-items: flex-end;
+  flex-basis: 32%;
+  flex-wrap: wrap;
+}
+.flex-item:first-child{
+  flex-basis: 100%;
+}
+.flex-item:hover {
+  background-color: rgba(147, 142, 142, 0.3);
 }
 .contact {
+  min-height: 400px;
   height: 200px;
 }
 
