--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,6 +80,8 @@ header nav ul li a {
   padding-left: 25px;
 }
 /* End of About Me Section  */
+
+/* Work Section  */
 .projects {
   background-color: #fbc7ba;
 }
@@ -104,7 +106,7 @@ header nav ul li a {
   flex-basis: 32%;
   flex-wrap: wrap;
 }
-.flex-item:first-child{
+.flex-item:first-child {
   flex-basis: 100%;
 }
 .flex-item:hover {
@@ -117,19 +119,18 @@ header nav ul li a {
 /* End of Work Section  */
 
 /* Contact Section */
-
 .contact {
-  background-color: #D06873;
+  background-color: #d06873;
 }
 .contact p {
   text-align: center;
   padding-bottom: 10px;
 }
-.contact-form {
-  /* background-color: blue; */
+/* .contact-form {
+  background-color: blue;
   padding: 20px;
   width: 40%;
-  margin: 3.5% auto 3.5% auto;
+  margin: 1.5% auto 3.5% auto;
 }
 .contact-form input, textarea {
   border: 1px solid black;
@@ -141,9 +142,36 @@ header nav ul li a {
   width: 100%;
   margin-bottom: 15px;
 }
-/* .contact-form button{
-  margin: 0 auto  auto;
+.contact-form .submit-btn{
+  border: 1px solid black;
+  background-color: red;
+  height: 40px;
+  width: 130px;
+  border-radius: 5px;
 } */
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+.contact-me-button {
+  background-image: linear-gradient(-180deg, #37aee2 0%, #1e96c8 100%);
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-sizing: border-box;
+  padding: 10px 10px;
+  margin-top: 35px;
+}
+.contact-me-button:hover {
+  background-image: linear-gradient(-180deg, #1d95c9 0%, #17759c 100%);
+}
+
+@media (min-width: 768px) {
+  .button-43 {
+    padding: 1rem 2rem;
+  }
+}
 /* Footer Section  */
 footer {
   background-color: #3d3c42;
