--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,9 +41,9 @@ header nav ul li a {
 /* Hero Banner Section  */
 .hero {
   height: 425px;
-  background-image: url(../images/long-journey-f2-1600x900.jpg);
+  background-image: url(../images/survivor-minimal-5k-n8-1600x900.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   position: relative;
 }
 .hero-text {
@@ -166,12 +166,6 @@ header nav ul li a {
 .contact-me-button:hover {
   background-image: linear-gradient(-180deg, #1d95c9 0%, #17759c 100%);
 }
-
-@media (min-width: 768px) {
-  .button-43 {
-    padding: 1rem 2rem;
-  }
-}
 /* Footer Section  */
 footer {
   background-color: #3d3c42;
@@ -208,4 +202,49 @@ footer p {
   text-align: center;
   margin: 0 auto 35px auto;
   border-bottom: 3px solid;
+}
+
+@media screen and (max-width: 980px){
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+  }
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+  header nav ul li a {
+    font-size: 20px;
+  }
+  footer h2,
+  footer div {
+    text-align: center;
+    width: 100%;
+  }
+  .hero-cta,
+  .hero-form {
+    width: 100%;
+  }
+  .hero-cta {
+    text-align: center;
+  }
+  .section-title {
+    width: 80%;
+  }
+  .flex-item:first-child {
+  flex-basis: 70%;
+}
+}
+
+
+@media screen and (min-width: 768px) {
+  .button-43 {
+    padding: 1rem 2rem;
+  }
 }
